# FRC4453_2019_PROJ

./: .travis.yml  FRC4453_2019_PROJ.code-workspace  README.md  opencv_install.sh
Docs/: Vision.md
Robot/: build.gradle
Robot/.wpilib/: wpilib_preferences.json
Robot/src/main/java/org/usfirst/frc/team4453/robot/: OI.java  Robot.java  RobotMap.java
Robot/src/main/java/org/usfirst/frc/team4453/robot/commands/: AutoNavigation.java  ChassisShiftHigh.java  ChassisShiftLow.java  ClimberClimb.java  ClimberControl.java  ClimberStop.java  GrabberGrab.java  GrabberHold.java  GrabberPull.java  GrabberRelease.java  GrabberTeleop.java  GrabberThrow.java  GrabberTilt.java  HookLower.java  HookLowerFast.java  HookRaise.java  HookStop.java  HookTeleop.java  ShooterFire.java  TeleopDrive.java  WaitForGrabberInit.java  WaitForShooterInit.java  WingsDrop.java  WingsLift.java
Robot/src/main/java/org/usfirst/frc/team4453/robot/commands/autonomous/: ApproachAndPlaceCube.java  ApproachAndPlaceCube2.java  AutoAnyPosition.java  AutoCoord.java  AutoTest.java  CrossAutoLine.java  FieldConstants.java  NoOp.java  ProceedIfSwitchIsCorrect.java  RobotDriveCountCubes.java  RobotDriveDistance.java  RobotDriveTime.java  RobotDriveToCoord.java  RobotTurn.java  TiltForSwitch.java
Robot/src/main/java/org/usfirst/frc/team4453/robot/subsystems/: Chassis.java  Climber.java  Grabber.java  Hook.java  Shooter.java  Wings.java
Vision/: Cargo.toml
Vision/src/: logging.rs  main.rs  vision.rs
