[package]
name = "vision"
version = "0.1.0"
authors = ["Conner Ebbinghaus <connerebbinghaus@gmail.com>"]

[dependencies]
cv = { git = "https://github.com/nebgnahz/cv-rs.git" }
rumqtt = { git = "https://github.com/connerebbinghaus/rumqtt" } # Plays nicer with openssl (as in, not at all).
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4"
fern = "0.5"
